# fipers

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ffigen.yaml  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
android/: CMakeLists.txt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: app_test.dart
example/ios/: Podfile
example/ios/Runner.xcodeproj/: project.pbxproj.backup
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/macos/Frameworks/: libfipers.dylib  libssl.3.dylib
example/macos/Runner.xcodeproj/: project.pbxproj  project.pbxproj.backup
ios/: CMakeLists.txt
lib/: fipers.dart
lib/src/: fipers_interface.dart  fipers_native.dart  fipers_native_export.dart  fipers_stub.dart  fipers_web.dart  fipers_web_export.dart
lib/src/bindings/: platform_stub.dart  storage_bindings.dart
lib/src/web/: crypto_web.dart  fipers_web_wasm.dart  html_stub.dart  storage_web.dart  wasm_loader.dart
linux/: CMakeLists.txt
macos/: CMakeLists.txt
native/: Makefile.wasm
native/include/: storage.h
native/src/: crypto.c  crypto.h  storage.c  storage_wasm.c
scripts/: README.md  build.ps1  build.sh  build_openssl_android.sh  build_wasm.sh  fipers_ios_build.sh  integrate_android_library.py  integrate_ios_library.py  integrate_ios_library.sh  integrate_macos_library.py  setup_ios_library.sh
test/: BENCHMARK.md  PERFORMANCE.md  benchmark_test.dart  fipers_test.dart  integration_test.dart  performance_test.dart
windows/: CMakeLists.txt
